--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 .bkcolor {
     background-color: rgb(51, 53, 59);
-
 }
 
 #containerMain{
@@ -24,7 +23,6 @@ color: antiquewhite;
         font-style: normal;
         font-size: 60px;
         margin-top: 100px;
-    
 }
 
 #tituloNos{
@@ -34,8 +32,6 @@ color: antiquewhite;
     font-size: 60px;
     margin-top: 50px;
 }
-
-
 
 #NuestroEquipo{
     text-align: center;
@@ -52,59 +48,36 @@ color: antiquewhite;
     text-align: center;
     font-family: 'Nunito';
     font-size: x-large;
-    
     text-shadow: 0px 1px 1px rgb(68, 4, 4);
 }
 
 .bgAguas{
-background-image: linear-gradient(rgba(0, 0, 0, 0.842),rgba(0,0,0,0.5)),url("/ArgProg-TPFinal/images/Theater.jpg");
+background-image: linear-gradient(rgba(0, 0, 0, 0.842),rgba(0,0,0,0.5)),url("../images/Theater.jpg");
 background-size: cover;
 width: 100%; height: 100vh;
 background-color: black;
-
 }
 
 .tifont{
     font: 0.7em sans-serif;
 }
+
 .marg{
     margin: 0.5rem;
 }
+
 #nosotros{
-    margin-top: 100px;
+    padding-top: 135px;
 }
+
 #conteinerNosotros{
     height: 100Vh;
-}
-
-.imgpla{
-    background-image: url("../images/honolulu.jpg");
-
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover 
-    }
-
-.td{
-    text-decoration: underline dotted;
-}
-
-.btbkg{
-background-color: rgb(162, 247, 105);
-}
-
-.ade:link{
-    text-decoration:none;
-    color: white;
-}
-.ade:visited{
-    text-decoration:none;
-    color: white;
 }
 
 .form-control {
     height: 37px;
 }
+
 .stepwizard-step p {
     margin-top: 10px;
 }
@@ -132,8 +105,6 @@ background-color: rgb(162, 247, 105);
     width: 100%;
     height: 1px;
     background-color: #ccc;
-
-
 }
 
 .stepwizard-step {
@@ -155,30 +126,33 @@ background-color: rgb(162, 247, 105);
 
 #conteinerForm{
    height: 80vh;
-   
 }
 
 .reveal {
     position: relative;
     opacity: 0;
   }
+
   .reveal.active {
     opacity: 1;
   }
+
   .active.fade-bottom {
     animation: fade-bottom 1s ease-in;
   }
+
   .active.fade-left {
     animation: fade-left 1s ease-in;
   }
+
   .active.fade-right {
     animation: fade-right 1s ease-in;
   }
 
   #sectionform2{
     display: none;
-    height: 85vh;
-  }
+    height: 100vh;
+}
 
 #contactoo{
     margin-top: 20px;
@@ -189,14 +163,32 @@ background-color: rgb(162, 247, 105);
     transform: translateY(150px);
     opacity: 0;
     transition: 2s all ease;
-  }
-  .reveal.active{
+}
+
+.reveal.active{
     transform: translateY(0);
     opacity: 1;
-  }
+}
 
-  #clientes{
-    margin-top: 150px;
+#clientes{
+    justify-items: center;
     text-align: center;
-    height: 100vh;
-  }
+    padding-top: 100px;
+    margin-bottom: 65px;
+}
+
+#clientes button{
+    background-color: transparent;
+    color: black;
+    font-family: 'Nunito';
+    font-weight: bold;
+    box-shadow: inset;
+    border-radius: 15px;
+    margin-bottom: 15px;
+}
+
+#step-3 p{
+    display: block;
+    font-family: monospace;
+    margin: 1em 0;  
+}
