--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,6 @@ background-color: black;
 
 #step-3 p{
     display: block;
-    font-family: monospace;
-    margin: 1em 0;  
+    font-family: 'Nunito';
+    margin: 0,5em 0;  
 }
